--- a/project/savila project/assets/stylesheet/style.css
+++ b/project/savila project/assets/stylesheet/style.css
@@ -178,8 +178,11 @@ a {
 
 .hotel {
   position: absolute;
-  top: 12.1%;
+  top: 82%;
   left: 51%; }
+
+.mainpage {
+  top: 12.1%; }
 
 .secondary_container {
   width: 80%;
@@ -193,9 +196,11 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 25px; }
     .secondary_container .service__list .service_item h5 {
+      margin: 10px 0;
       font-size: 16px; }
     .secondary_container .service__list .service_item p {
-      font-size: 12px; }
+      margin: 10px 0;
+      font-size: 14px; }
     .secondary_container .service__list .service_item img {
       width: 100%;
       height: auto; }
@@ -210,39 +215,63 @@ a {
   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr; }
-  .section-two p {
+  .section-two .service__details {
     display: inline-block;
     position: absolute;
     left: 60%;
     top: 50%;
     transform: translateY(-50%); }
+    .section-two .service__details p {
+      margin: 10px 0; }
+
+.mission h4 {
+  margin: 15px 0;
+  font-size: 30px; }
+.mission p {
+  width: 80%;
+  line-height: 25px; }
 
 .contactSection {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-gap: 30px; }
+  .contactSection .address span {
+    display: inline-block;
+    margin: 10px 0;
+    font-size: 20px; }
 
 .contact__form {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 30px; }
+  grid-gap: 20px; }
+  .contact__form .address p {
+    font-size: 14px;
+    margin: 10px 0; }
 
 .contact__details input {
+  width: 90%;
   border: none;
   margin: 10px;
-  border-bottom: 1px solid black; }
+  border-bottom: 2px solid #b1b1b1; }
 
 .contact__us .input1 {
   border: none;
   width: 100%;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid #b1b1b1;
   margin: 10px 0; }
-
-.input2 {
+.contact__us .input2 {
   width: 100%;
   box-sizing: border-box;
-  border: 1px solid black;
-  height: 80px; }
+  border: 2px solid #b1b1b1;
+  height: 70px; }
+.contact__us .submit {
+  color: white;
+  margin: 20px 0;
+  float: right;
+  border: none;
+  padding: 5px 20px;
+  border-radius: 20px;
+  background: #10ca10; }
 
 .cat__book {
   float: right;
@@ -260,10 +289,106 @@ a {
 .cat__item {
   margin-top: 10px; }
 
+.room__details {
+  margin: 10px 0;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 20px; }
+  .room__details .service_item_list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px; }
+  .room__details .service_item h5 {
+    margin: 10px 0;
+    font-size: 16px; }
+  .room__details .service_item p {
+    margin: 10px 0;
+    font-size: 12px; }
+  .room__details .service_item img {
+    width: 100%;
+    height: auto; }
+  .room__details .service_item .cat__book {
+    float: none; }
+  .room__details .service_item ul {
+    margin-top: 20px; }
+    .room__details .service_item ul li {
+      list-style-type: square;
+      font-size: 18px;
+      line-height: 30px; }
+
+.blog__hero {
+  margin: 10px 0; }
+  .blog__hero img {
+    width: 100%;
+    height: 350px; }
+
+.blog__post {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-gap: 20px; }
+  .blog__post .post_details h3 {
+    margin: 10px 0; }
+  .blog__post .post_details p {
+    margin: 10px 0; }
+  .blog__post .post_details h4 {
+    margin: 20px 0;
+    font-size: 20px; }
+  .blog__post .post_details img {
+    width: 100%;
+    height: 350px; }
+  .blog__post .post_summary h4 {
+    margin: 20px 0;
+    font-size: 20px; }
+  .blog__post .post_summary ul li {
+    font-size: 16px;
+    padding: 5px 0; }
+
+.error__container {
+  height: 400px;
+  position: relative; }
+  .error__container .error__details {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
+    .error__container .error__details h4 {
+      margin-bottom: 50px; }
+    .error__container .error__details h3 {
+      font-size: 100px;
+      margin: 30px 0;
+      text-align: center; }
+    .error__container .error__details .error {
+      border: none;
+      background: #17a717;
+      padding: 10px 25px;
+      font-size: 20px;
+      border-radius: 20px; }
+
+.luxury {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  margin: 20px 0; }
+  .luxury p {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-gap: 10px;
+    align-items: center; }
+    .luxury p img {
+      width: 35px;
+      height: auto; }
+
 .about__details {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
+  .about__details .details__item p {
+    line-height: 20px;
+    margin: 10px;
+    font-size: 14px; }
+  .about__details .left p {
+    line-height: 30px;
+    font-size: 18px; }
 
 .our__future {
   display: grid;
